--- a/common-cli.adoc
+++ b/common-cli.adoc
@@ -6,7 +6,7 @@ platform.  The OpenShift tools are a single executable written in the Go
 programming language and is available for the following operating systems:
 
 - Microsoft Windows
-- Apple OS X
+- macOS 10
 - Linux
 
 You might already have the OpenShift CLI available on your environment. You can verify
@@ -235,7 +235,7 @@ https_proxy=http://proxy-server.mycorp.com:3128/
 HTTPS_PROXY=http://proxy-server.mycorp.com:3128/
 ----
 
-**OS X:**
+**macOS:**
 
 CAUTION: Replace the proxy server with the one for your environment/machine.
 
