--- a/common-parksmap-architecture.adoc
+++ b/common-parksmap-architecture.adoc
@@ -2,7 +2,7 @@ This lab introduces you to the architecture of the ParksMap application used thr
 
 image::roadshow-app-architecture.png[Application architecture,800,align="center"]
 
-The main service is a web application which has a server-side component in charge of aggregating the geo-spatial APIs provided by multiple independent backend services and a client-side component in Javascript that is responsible for visualizing the geo-spatial data on the map. The client-side component which runs in your browser communicates with the server-side via WebSockets protocol in order to update the map in real-time.
+The main service is a web application which has a server-side component in charge of aggregating the geo-spatial APIs provided by multiple independent backend services and a client-side component in JavaScript that is responsible for visualizing the geo-spatial data on the map. The client-side component which runs in your browser communicates with the server-side via WebSockets protocol in order to update the map in real-time.
 
 There will be a set of independent backend services deployed that will provide different mapping and geo-spatial information. The set of available backend services that provide geo-spatial information are:
 
@@ -12,6 +12,6 @@ There will be a set of independent backend services deployed that will provide d
 * Earthquakes epicenters in New Zealand in November 2017
 * Aussie Dunnies
 
-The original source code for this applications is located link:https://github.com/openshift-roadshow/[here]
+The original source code for this application is located link:https://github.com/openshift-roadshow/[here].
 
-The server-side component of the ParksMap web acts as a communication gateway to all the available backends. These backends will be dynamically discovered by using service discovery mechanisms provided by OpenShift which will be discussed in more details in the following labs.
+The server-side component of the ParksMap web application acts as a communication gateway to all the available backends. These backends will be dynamically discovered by using service discovery mechanisms provided by OpenShift which will be discussed in more details in the following labs.
