--- a/common-workshop-links.adoc
+++ b/common-workshop-links.adoc
@@ -1,4 +1,4 @@
-You find all urls, hostnames, usernames and passwords that are needed during the workshop in this page. Note that the urls are also embedded inside the labs so that you don't have to go back and forth between this page and the labs.
+You can find all urls, hostnames, usernames and passwords that are needed during the workshop in this page. Note that the urls are also embedded inside the labs so that you don't have to go back and forth between this page and the labs.
 
 == OpenShift cluster URL
 
