--- a/mlbparks-binary-build.adoc
+++ b/mlbparks-binary-build.adoc
@@ -1,12 +1,12 @@
 == Moving on From S2I
-As you saw before S2I is a great way to get from source code to a container, but the process is a bit too slow for daily fast iteration
+As you saw before S2I is a great way to get from source code to a container, but the process is a bit too slow for daily fast iterative
 development. For example, if you want to change some CSS or change one method in a class you don't want to go through
 a full git commit and build cycle. In this lab we are going to show you a more efficient method for quick iteration. While
-we are at it we will also throw in showing you how to debug your code as well.
+we are at it we will also show you how to debug your code.
 
-Now that we built the MLB parks service let's go ahead and make some quick changes
+Now that we built the MLB parks service let's go ahead and make some quick changes.
 
-== Fast Iteration Code Change Using Binary Deploy
+== Fast Iterative Code Change Using Binary Deploy
 
 The OpenShift command line has the ability to do a deployment from your local machine. In this case we are going to use S2I,
 but we are going to tell OpenShift to just take the war file from our local machine and bake it in the image.
@@ -20,7 +20,7 @@ machine AND would also not require git commit with a push. Read more in the
 https://{{DOCS_URL}}/dev_guide/dev_tutorials/binary_builds.html[official documentation]
 
 
-== Exercise: Using binary deployment
+== Exercise: Using Binary Deployment
 
 === Clone source
 The first step is to clone the MLB source code from GitHub to your local machine:
@@ -52,7 +52,7 @@ that gives basic info on the service and can be reached at:
 
 CAUTION: In the following url(s), replace `{{ USER_PROJECT }}` with the guid provided to you.
 
-[source,bash]
+[source,bash,role=copypaste]
 ----
 http://mlbparks-{{ USER_PROJECT }}.{{ROUTER_ADDRESS}}/ws/info/
 ----
@@ -64,7 +64,7 @@ Please change line 23 to add a _AMAZING_ in front of "MLB Parks" look like this:
 return new Backend("mlbparks", "AMAZING MLB Parks", new Coordinates("39.82", "-98.57"), 5);
 ----
 
-Don't forget to save the file.
+Don't forget to save the file and run `mvn package` again.
 
 === Doing the Binary Build
 
@@ -79,17 +79,16 @@ oc start-build bc/mlbparks --from-file=target/ROOT.war --follow
 
 NOTE: The --follow is optional if you want to follow the build output in your terminal.
 
-Using labels and a recreate deployment strategy, as soon as we get the new deployment finishes the map name
-will be updated. Under a recreate deployment strategy we first tear down the pod before doing our new deployment.
+Using labels and a recreate deployment strategy, as soon as the new deployment finishes the map name will be updated. Under a recreate deployment strategy we first tear down the pod before doing our new deployment.
 When the pod is torn down, the parksmap service removes the MLBParks map from the layers. When it comes back up, the layer
-automatically get's added back with our beautiful new title.  This would not have happened with a rolling deployment because
+automatically gets added back with our new title.  This would not have happened with a rolling deployment because
 rolling spins up the new version of the pod before it takes down the old one. Rolling strategy enables a zero-downtime deployment.
 
 When the deployment is finished and the container is deployed you will see the new content at:
 
 CAUTION: In the following url(s), replace `{{ USER_PROJECT }}` with the project provided to you.
 
-[source,bash]
+[source,bash,role=copypaste]
 ----
 http://mlbparks-{{ USER_PROJECT }}.{{ROUTER_ADDRESS}}/ws/info/
 ----
