--- a/mlbparks-debugging.adoc
+++ b/mlbparks-debugging.adoc
@@ -1,7 +1,7 @@
 == Background: Port Forwarding and Debugging
 Just as we did before with remote shelling into our pods, we can also set up a port-forward between our local machine
 and our pod. The is useful for operations like connecting to a database running in a pod, viewing an administrative web
-interface we don't want to expose to the public, or, in our case, attach a debugger to the JVM running our application
+interface we don't want to expose to the public, or, in our case, attaching a debugger to the JVM running our application
 server.
 
 You can read more about port-forwarding from the
@@ -17,9 +17,9 @@ need to turn on the debug ports
 It is very simple to turn on debugging. The EAP S2I container we are using is looking for an environment variable to
 control whether or not to enable the debug port. All we need to do is set an environment variable for the deployment.
 
-[source,bash]
+[source,bash,role=copypaste]
 ----
-$ oc set env dc/mlbparks DEBUG=true
+oc set env dc/mlbparks DEBUG=true
 ----
 
 This will force a redeploy of our MLBparks pod, this time with the JDWT transport enabled and serving on port 8787.
@@ -29,9 +29,13 @@ This will force a redeploy of our MLBparks pod, this time with the JDWT transpor
 It is quite simple to do port-forwarding.
 
 First get the pods:
-[source,bash]
+[source,bash,role=copypaste]
 ----
 oc get pods
+----
+
+[source,bash]
+----
 NAME                       READY     STATUS      RESTARTS   AGE
 mlbparks-1-build           0/1       Completed   0          9m
 mlbparks-2-7c6zb           1/1       Running     0          4m
@@ -41,9 +45,9 @@ parksmap-2-wms5l           1/1       Running     0          13m
 
 Now we are all set to set up the port-forward:
 
-[source,bash]
+[source,bash,role=copypaste]
 ----
-$ oc port-forward mlbparks-2-7c6zb 8787:8787
+oc port-forward mlbparks-2-7c6zb 8787:8787
 ----
 
 We said to port-forward from port 8787 on the pod to 8787 on the local machine. Now we can attach a remote debugger.
