--- a/mlbparks-templates.adoc
+++ b/mlbparks-templates.adoc
@@ -1,5 +1,5 @@
 In this lab, we're going to deploy a complete backend application, consisting of
-an REST API backend and a mongo database. The complete application will already
+a REST API backend and a MongoDB database. The complete application will already
 be wired together and described as a backend for the map visualization tool, so
 that once the application is built and deployed, you will be able to see the new
 map.
@@ -38,32 +38,32 @@ as many back end services' data as are created. Adding more stuff with the right
 
 Now you will deploy a map of Major League Baseball stadiums in the US by using a
 template. It is pre-configured to build the back end Java application, and
-deploy the Mongo database. It also uses a *Hook* to call the `/ws/data/load`
+deploy the MongoDB database. It also uses a *Hook* to call the `/ws/data/load`
 endpoint to cause the data to be loaded into the database from a JSON file in
 the source code repository. Execute the following command:
 
-[source,bash]
+[source,bash,role=copypaste]
 ----
-$ oc create -f https://raw.githubusercontent.com/openshift-roadshow/mlbparks/master/ose3/application-template-eap.json
+oc create -f https://raw.githubusercontent.com/openshift-roadshow/mlbparks/master/ose3/application-template-eap.json
 ----
 
 What just happened? What did you just `create`? The item that we passed to the `create`
 command is a *Template*. `create` simply makes the template available in
 your *Project*. You can see this with the following command:
 
-[source,bash]
+[source,bash,role=copypaste]
 ----
-$ oc get template
+oc get template
 ----
 
 You will see output like the following:
 
 [source,bash]
 ----
-mlbparks      Application template MLBParks backend running on JBoss EAP and using MongoDB   15 (5 blank)   8
+mlbparks      Application template MLBParks backend running on Wildfly and using mongodb   12 (2 blank)   8
 ----
 
-In the web UI, you can see the templates you have in your project, by clicking on the 
+In the web console, you can see the templates you have in your project, by clicking on the 
 *"Add to project --> Select from project"* dropdown menu.
 
 image::mlbparks-templates-from-project-menu.png[Select from project menu]
@@ -78,7 +78,7 @@ Here it is!
 
 If you want to use command line:
 
-[source,bash]
+[source,bash,role=copypaste]
 ----
 oc new-app mlbparks -p APPLICATION_NAME=mlbparks
 ----
@@ -89,7 +89,7 @@ The template can also use maven for the build. In case you want to try this opti
 provide the *MAVEN_MIRROR_URL* parameter with the location of the internal nexus
 repository:
 
-[source,bash]
+[source,bash,role=copypaste]
 ----
 oc new-app mlbparks --name=mlbparks -p MAVEN_MIRROR_URL=http://nexus.{{INFRA_PROJECT}}.svc.cluster.local:8081/repository/maven-all-public
 ----
@@ -100,17 +100,17 @@ You will see some output similar to this:
 
 [source,bash]
 ----
---> Deploying template mlbparks
+--> Deploying template "user2/mlbparks" to project user2
 
-     mlbparks
+     MLBparks
      ---------
-     Application template MLBParks backend running on JBoss EAP and using MongoDB
+     Application template MLBParks backend running on Wildfly and using mongodb
 
      * With parameters:
         * Application Name=mlbparks
         * Application route=
         * Mongodb App=mongodb-mlbparks
-        * Git source repository=https://github.com/openshift-roadshow/mlbparks
+        * Git source repository=https://github.com/openshift-roadshow/mlbparks.git
         * Git branch/tag reference=master
         * Database name=mongodb
         * MONGODB_NOPREALLOC=
@@ -136,7 +136,7 @@ You will see some output similar to this:
     Run 'oc status' to view your app.
 ----
 
-Or if you prefer using the web UI, just click on the template we just saw:
+Or if you prefer using the web UI, you can just click on the template we just saw. If you followed the command line steps above then *do not* follow the web console steps below. This is simply demonstrating an alternate way to instantiate the template.
 
 image::mlparks-templates-from-project-info.png[Template info]
 
@@ -150,7 +150,7 @@ Go ahead and click *"Create"*
 OpenShift will now:
 
 * Configure and start a build
-** Using the supplied Maven mirror URL (In case you have specified tha parameter)
+** Using the supplied Maven mirror URL (In case you have specified the parameter)
 ** From the supplied source code repository
 * Configure and deploy MongoDB
 ** Using auto-generated user, password, and database name
@@ -172,13 +172,13 @@ image::mlbparks-templates-complete-overview.png[Complete overview]
 As a final exercise, look at the template that was used to create the
 resources for our *mlbparks* application.
 
-[source,bash]
+[source,bash,role=copypaste]
 ----
-$ oc get template mlbparks -o yaml
+oc get template mlbparks -o yaml
 ----
 
-But as always, you can use the OpenShift console to do the same. Under *"Resources menu"*, click on *"Other resources"*,
-then select *"Templates*" from teh dropdown, and select the *"Edit YAML"* action, on the *"Actions"* dropdown. 
+But as always, you can use the OpenShift web console to do the same. Under *"Resources menu"*, click on *"Other resources"*,
+then select *"Templates*" from the dropdown, and select the *"Edit YAML"* action, on the *"Actions"* dropdown. 
 
 image::mlbparks-templates-yaml-menu.png[Complete overview]
 
