--- a/parksmap-logging.adoc
+++ b/parksmap-logging.adoc
@@ -34,23 +34,27 @@ You should see a nice view of the *Pod*'s logs:
 
 image::parksmap-logging-console-logs.png[Application Logs]
 
-WARNING: It appears there are some errors in the log, and that's OK. We'll remedy those in a little bit.
+WARNING: It appears there are some errors in the log, and that's okay. We'll remedy those in a little bit.
 
 You also have the option of viewing logs from the command line. Get the name of
 your *Pod*:
 
+[source,bash,role=copypaste]
+----
+oc get pods
+----
+
 [source,bash]
 ----
-$ oc get pods
 NAME               READY     STATUS    RESTARTS   AGE
 parksmap-1-hx0kv   1/1       Running   0          5h
 ----
 
 And then use the `logs` command to view this *Pod*'s logs:
 
-[source,bash]
+[source,bash,role=copypaste]
 ----
-$ oc logs parksmap-1-hx0kv
+oc logs parksmap-1-hx0kv
 ----
 
 You will see all of the application logs scroll on your screen:
@@ -81,7 +85,7 @@ or if you just want to get historical information, these mechanisms may be
 insufficient.
 
 Fortunately, OpenShift provides an optional system for log aggregation that uses
-Fluentd, Elasticsearch, and Kibana (EFK).
+Elasticsearch, Fluentd, and Kibana (EFK).
 
 In the OpenShift web console on the *Pod*'s logs page, at the right you will see
 a "View Archive" link. Go ahead and click it. If you do not see the "archive" link, ensure that you have at least two pods running.  If you don't, use the information you learned in a previous lab to scale up to two instances of the application.  You will need to accept the SSL
@@ -91,7 +95,7 @@ image::parksmap-logging-view-log-archive.png[View Logs]
 
 [NOTE]
 ====
-The previous link only appears on the page for the pod logs. If you want to access the kibana interface at any time, you can do so by using the following URL:
+The previous link only appears on the page for the pod logs. If you want to access the Kibana interface at any time, you can do so by using the following URL:
 
 https://kibana.{{ ROUTER_ADDRESS }}
 
@@ -108,9 +112,9 @@ The "View Archive" link that you clicked takes you to a default view with a spec
 pre-populated. Kibana will only show you logs where the pod name is
 `parksmap-1-hx0kv` and in the *Project* (namespace) {{ USER_PROJECT }}.
 
-CAUTION: In the following url(s), replace `{{ USER_PROJECT }}` with the project provided to you and the pod_name to match your pod.
+CAUTION: In the following command(s), replace `{{ USER_PROJECT }}` with the project provided to you and the pod_name to match your pod.
 
-[source,bash]
+[source,bash,role=copypaste]
 ----
 kubernetes.pod_name:"parksmap-1-hx0kv" AND kubernetes.namespace_name:"{{ USER_PROJECT }}"
 ----
@@ -118,7 +122,7 @@ kubernetes.pod_name:"parksmap-1-hx0kv" AND kubernetes.namespace_name:"{{ USER_PR
 If you want to see all the historical logs for this *Project*, simply remove the
 pod name reference and click the magnifying glass or press the enter key.
 
-CAUTION: In the following url(s), replace `{{ USER_PROJECT }}` with the project provided to you.
+CAUTION: In the following command(s), replace `{{ USER_PROJECT }}` with the project provided to you.
 
 [source,bash,role=copypaste]
 ----
@@ -134,7 +138,7 @@ image::parksmap-logging-kibana-parksmap-headers.png[Kibana Interface]
 
 Try the following search string ensuring that you use the correct name for your project:
 
-CAUTION: In the following url(s), replace `{{ USER_PROJECT }}` with the project provided to you.
+CAUTION: In the following command(s), replace `{{ USER_PROJECT }}` with the project provided to you.
 
 [source,bash,role=copypaste]
 ----
