--- a/parksmap-rsh.adoc
+++ b/parksmap-rsh.adoc
@@ -11,14 +11,14 @@ need to run an SSH service inside each container. In order to establish an
 interactive session inside a container, you can use the `oc rsh` command. First
 get the list of available pods:
 
-[source]
+[source,bash,role=copypaste]
 ----
-$ oc get pods
+oc get pods
 ----
 
 You should an output similar to the following:
 
-[source]
+[source,bash]
 ----
 NAME               READY     STATUS    RESTARTS   AGE
 parksmap-2-tegp4   1/1       Running   0          2m
@@ -26,14 +26,14 @@ parksmap-2-tegp4   1/1       Running   0          2m
 
 Now you can establish a remote shell session into the pod by using the pod name:
 
-[source,role=copypaste]
+[source,bash,role=copypaste]
 ----
-$ oc rsh parksmap-2-tegp4
+oc rsh parksmap-2-tegp4
 ----
 
 You would see the following output:
 
-[source]
+[source,bash]
 ----
 sh-4.2$
 ----
@@ -47,10 +47,13 @@ can be specified after the pod name in the issued command.
 
 Run the following command to list the files in the top folder:
 
-[source]
+[source,bash,role=copypaste]
 ----
-$ ls /
+ls /
+----
 
+[source,bash]
+----
 anaconda-post.log  bin  dev  etc  home  lib  lib64  lost+found  media  mnt  opt  parksmap.jar  proc  root  run  sbin  srv  sys  tmp  usr  var
 ----
 
@@ -79,14 +82,14 @@ the executable path.
 
 In order to show just the JAR file, run the following:
 
-[source,role=copypaste]
+[source,bash,role=copypaste]
 ----
 $ oc exec parksmap-2-tegp4 -- ls -l /parksmap.jar
 ----
 
 You would see something like the following:
 
-[source]
+[source,bash]
 ----
 -rw-r--r--. 1 root root 21753918 Nov 23 15:54 /parksmap.jar
 ----
@@ -101,30 +104,29 @@ end and where the actual command to execute begins. Take a look at `oc exec
 
 You can also specify the shell commands to run directly with the *oc rsh* command:
 
-[source,role=copypaste]
+[source,bash,role=copypaste]
 ----
 $ oc rsh parksmap-2-tegp4 whoami
 ----
 
 You would see something like:
 
-[source]
+[source,bash]
 ----
 whoami: cannot find name for user ID 1000060000
-error: error executing remote command: error executing command in container: Error executing in Docker Container: 1
+command terminated with exit code 1
 ----
 
 [NOTE]
 ====
-It is important to understand that, for security reasons, OpenShift does not run
-Docker containers as the user specified in the Dockerfile by default. In fact,
+It is important to understand that, for security reasons, OpenShift does not run containers as the user specified in the Dockerfile by default. In fact,
 when OpenShift launches a container its user is actually randomized.
 
-If you want or need to allow OpenShift users to deploy Docker images that do
+If you want or need to allow OpenShift users to deploy container images that do
 expect to run as root (or any specific user), a small configuration change is
 needed. You can learn more about the
-https://{{DOCS_URL}}/creating_images/guidelines.html[Docker guidelines]
+https://{{DOCS_URL}}/creating_images/guidelines.html[container image guidelines]
 for OpenShift, or you can look at the section on
 https://{{DOCS_URL}}/admin_guide/manage_scc.html#enable-images-to-run-with-user-in-the-dockerfile[enabling
-images to run with a USER in the dockerfile].
+images to run with a USER in the Dockerfile].
 ====
